# HandiMaker

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
Handi/: asgi.py  settings.py  urls.py  wsgi.py
website/: models.py  views.py
website/templates/website/: base.html  home.html
